[package]
name = "egghead"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.5"
anyhow = "1"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.15", features = ["blocking"] }
rss = "2.0.2"
rand = "0.8.5"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.93"
serde_with = "3.0.0"
urlencoding = "2.1.2"
closestmatch = "0.1.2"
unidecode = "0.3.0"
unicase = "2.6.0"
unicode-normalization = "0.1.22"
uuid = { version = "1.3.2", features = ["v4"] }