[package]
name = "egghead"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.5"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.15", features = ["blocking"] }
rss = "2.0.2"
rand = "0.8.5"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.93"
serde_with = "3.0.0"
urlencoding = "2.1.2"
closestmatch = "0.1.2"
unidecode = "0.3.0"
unicase = "2.6.0"
unicode-normalization = "0.1.22"
rust-fuzzy-search = "0.1.1"
uuid = { version = "1.3.2", features = ["v4"] }
anyhow = "1.0.75"
candle = { git = "https://github.com/huggingface/candle.git", version = "0.3.1", package = "candle-core" }
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.17"
clap = "4.4.7"
hf-hub = "0.3.2"
image = "*"
tokenizers = "0.13.4"
base64 = "0.22.0"
