[package]
name = "egghead"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.5"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.15", features = ["blocking", "json"] }
serde_json = "1.0.93"
serde = "1.0.228"
rusqlite = { version = "0.30", features = ["bundled"] }
rss = "2.0"
chrono = "0.4"
warp = { version = "0.4", features = ["server"] }
base64 = "0.21"
